# GLYC

./: AvailableOptionsDialog.qml  ButtonGlyc.qml  CMakeLists.txt  Chat.qml  Cipher.qml  Decipher.qml  Main.qml  README.md  main.cpp
android/: AndroidManifest.xml
